...
@Preview(
    heightDp = 100,
)
fun ItemInfoGramsPreview() {
    ItemInfoGrams(
        tag = "Proteins",
        count = "10",
        unit = "g",
        colors = ItemInfoGramsColors()
    )
}

@Composable
...
